# luxcare-ai

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh
agents/: agent.py
